--- a/src-tauri/lang/fr.json
+++ b/src-tauri/lang/fr.json
@@ -36,7 +36,8 @@
     "redirect_more": "Réorienter également les autres jeux MHY",
     "web_cache": "Supprimer le dossier webCaches",
     "launch_args": "Arguments de lancement",
-    "offline_mode": "Mode hors ligne"
+    "offline_mode": "Mode hors ligne",
+    "fix_res": "Réparation du login"
   },
   "downloads": {
     "grasscutter_fullbuild": "Telecharger Grasscutter tout-en-un",
@@ -67,7 +68,8 @@
     "select_folder": "Choisir un dossier...",
     "download": "Télécharger",
     "delete": "Supprimer",
-    "install": "Installer"
+    "install": "Installer",
+    "fix": "Fix"
   },
   "news": {
     "latest_commits": "Commits récents",
