--- a/src-tauri/lang/pt-br.json
+++ b/src-tauri/lang/pt-br.json
@@ -36,7 +36,8 @@
     "redirect_more": "Também redirecionar outros jogos MHY",
     "web_cache": "Excluir pasta webCaches",
     "launch_args": "Argumentos de lançamento",
-    "offline_mode": "Modo offline"
+    "offline_mode": "Modo offline",
+    "fix_res": "Corrigir o tempo limite de login"
   },
   "downloads": {
     "grasscutter_fullbuild": "Baixar o Grasscutter Tudo-em-Um",
@@ -68,7 +69,8 @@
     "select_folder": "Selecione a pasta...",
     "download": "Baixar",
     "delete": "Deletar",
-    "install": "Instalar"
+    "install": "Instalar",
+    "fix": "Fix"
   },
   "news": {
     "latest_commits": "Commits Recentes",
