--- a/src-tauri/lang/chs.json
+++ b/src-tauri/lang/chs.json
@@ -36,7 +36,8 @@
     "redirect_more": "还可以重定向其他MHY游戏",
     "web_cache": "删除 webCaches 文件夹",
     "launch_args": "启动参数",
-    "offline_mode": "离线模式"
+    "offline_mode": "离线模式",
+    "fix_res": "修复登录超时"
   },
   "downloads": {
     "grasscutter_fullbuild": "下载 Grasscutter 一体化",
@@ -68,7 +69,8 @@
     "select_folder": "选择文件夹...",
     "download": "下载",
     "delete": "删除",
-    "install": "安装"
+    "install": "安装",
+    "fix": "Fix"
   },
   "news": {
     "latest_commits": "最近提交",
