--- a/src-tauri/lang/cht.json
+++ b/src-tauri/lang/cht.json
@@ -36,7 +36,8 @@
     "redirect_more": "同時重定向其他 MHY 遊戲",
     "web_cache": "刪除 webCaches 文件夾",
     "launch_args": "啟動參數",
-    "offline_mode": "離線模式"
+    "offline_mode": "離線模式",
+    "fix_res": "修復登入逾時"
   },
   "downloads": {
     "grasscutter_fullbuild": "下載Grasscutter多合一下載",
@@ -68,7 +69,8 @@
     "select_folder": "選擇資料夾...",
     "download": "下載",
     "delete": "刪除",
-    "install": "安裝"
+    "install": "安裝",
+    "fix": "Fix"
   },
   "news": {
     "latest_commits": "最近的PR",
