--- a/src-tauri/lang/it.json
+++ b/src-tauri/lang/it.json
@@ -36,7 +36,8 @@
     "redirect_more": "Reindirizza anche altri giochi MHY",
     "web_cache": "Elimina la cartella webCaches",
     "launch_args": "Argomenti di lancio",
-    "offline_mode": "Modalità Offline"
+    "offline_mode": "Modalità Offline",
+    "fix_res": "Correggere il timeout dell'accesso"
   },
   "downloads": {
     "grasscutter_fullbuild": "Scarica Grasscutter Tutto-in-Uno",
@@ -68,7 +69,8 @@
     "select_folder": "Seleziona cartella...",
     "download": "Scarica",
     "delete": "Cancella",
-    "install": "Installa"
+    "install": "Installa",
+    "fix": "Fix"
   },
   "news": {
     "latest_commits": "Commit Recenti",
