--- a/src-tauri/lang/ko.json
+++ b/src-tauri/lang/ko.json
@@ -36,7 +36,8 @@
     "redirect_more": "다른 MHY 게임도 리디렉션",
     "web_cache": "webCaches 폴더 삭제",
     "launch_args": "실행 인수",
-    "offline_mode": "오프라인 모드"
+    "offline_mode": "오프라인 모드",
+    "fix_res": "로그인 시간 초과 수정"
   },
   "downloads": {
     "grasscutter_fullbuild": "올인원 Grasscutter 다운로드",
@@ -68,7 +69,8 @@
     "select_folder": "폴더 선택...",
     "download": "다운로드",
     "delete": "삭제",
-    "install": "설치"
+    "install": "설치",
+    "fix": "Fix"
   },
   "news": {
     "latest_commits": "공지 사항",
