--- a/src-tauri/lang/pt-br.json
+++ b/src-tauri/lang/pt-br.json
@@ -41,7 +41,7 @@
   },
   "downloads": {
     "grasscutter_fullbuild": "Baixar o Grasscutter Tudo-em-Um",
-    "grasscutter_fullquest": "Baixar de missões em um só lugar",
+    "grasscutter_fullquest": "Baixar de 4.7 em um só lugar",
     "grasscutter_stable_data": "Baixar os Dados do Grasscutter Estável",
     "grasscutter_latest_data": "Baixar os Dados do Grasscutter Mais Recente",
     "grasscutter_stable_data_update": "Atualizar os Dados do Grasscutter Estável",
